--- a/views/includes/edit.pug
+++ b/views/includes/edit.pug
@@ -70,12 +70,11 @@ if (infowindow === 'new')
 							
 							div.ms-TextField(style="width: 100%")
 								label.ms-Label From
-								vue-timepicker.ms-TextField-field#input-mo_b(ref="input-mo_b" type="text" name="mo_b" placeholder="Open" style=" min-width: 50px")
-								
+								vue-timepicker#input-mo_b(format="hh:mm A" ref="input-mo_b" type="text" name="mo_b" placeholder="Open" style=" min-width: 50px")
 						div.tb-5-m0
 							div.ms-TextField(style="width: 100%; min-width: 50px")
 								label.ms-Label to
-								vue-timepicker.ms-TextField-field#input-mo_e(ref="input-mo_e" type="text", name="mo_e", placeholder="Close", style=" min-width: 50px")
+								vue-timepicker#input-mo_e(format="hh:mm A" ref="input-mo_e" type="text", name="mo_e", placeholder="Close", style=" min-width: 50px")
 								
 				div.tb-3-m0
 					div.row
@@ -98,12 +97,12 @@ if (infowindow === 'new')
 							
 							div.ms-TextField(style="width: 100%")
 								label.ms-Label From
-								vue-timepicker.ms-TextField-field#input-tu_b(ref="input-tu_b" type="text", name="tu_b", placeholder="Open", style=" min-width: 50px")
+								vue-timepicker#input-tu_b(format="hh:mm A" ref="input-tu_b" type="text", name="tu_b", placeholder="Open", style=" min-width: 50px")
 								
 						div.tb-5-m0
 							div.ms-TextField(style="width: 100%; min-width: 50px")
 								label.ms-Label to
-								vue-timepicker.ms-TextField-field#input-tu_e(ref="input-tu_e" type="text", name="tu_e", placeholder="Close", style=" min-width: 50px")
+								vue-timepicker#input-tu_e(format="hh:mm A" ref="input-tu_e" type="text", name="tu_e", placeholder="Close", style=" min-width: 50px")
 								
 				div.tb-3-m0
 					div.row
@@ -126,12 +125,12 @@ if (infowindow === 'new')
 							
 							div.ms-TextField(style="width: 100%")
 								label.ms-Label From
-								vue-timepicker.ms-TextField-field#input-we_b(ref="input-we_b" type="text", name="we_b", placeholder="Open", style=" min-width: 50px")
+								vue-timepicker#input-we_b(format="hh:mm A" ref="input-we_b" type="text", name="we_b", placeholder="Open", style=" min-width: 50px")
 								
 						div.tb-5-m0
 							div.ms-TextField(style="width: 100%; min-width: 50px")
 								label.ms-Label to
-								vue-timepicker.ms-TextField-field#input-we_e(ref="input-we_e" type="text", name="we_e", placeholder="Close", style=" min-width: 50px")
+								vue-timepicker#input-we_e(format="hh:mm A" ref="input-we_e" type="text", name="we_e", placeholder="Close", style=" min-width: 50px")
 								
 				div.tb-3-m0
 					div.row
@@ -154,12 +153,12 @@ if (infowindow === 'new')
 							
 							div.ms-TextField(style="width: 100%")
 								label.ms-Label From
-								vue-timepicker.ms-TextField-field#input-th_b(ref="input-th_b" type="text", name="th_b", placeholder="Open", style=" min-width: 50px")
+								vue-timepicker#input-th_b(format="hh:mm A" ref="input-th_b" type="text", name="th_b", placeholder="Open", style=" min-width: 50px")
 								
 						div.tb-5-m0
 							div.ms-TextField(style="width: 100%; min-width: 50px")
 								label.ms-Label to
-								vue-timepicker.ms-TextField-field#input-th_e(ref="input-th_e" type="text", name="th_e", placeholder="Close", style=" min-width: 50px")
+								vue-timepicker#input-th_e(format="hh:mm A" ref="input-th_e" type="text", name="th_e", placeholder="Close", style=" min-width: 50px")
 								
 				div.tb-3-m0
 					div.row
@@ -182,12 +181,12 @@ if (infowindow === 'new')
 							
 							div.ms-TextField(style="width: 100%")
 								label.ms-Label From
-								vue-timepicker.ms-TextField-field#input-fr_b(ref="input-fr_b" type="text", name="fr_b", placeholder="Open", style=" min-width: 50px")
+								vue-timepicker#input-fr_b(format="hh:mm A" ref="input-fr_b" type="text", name="fr_b", placeholder="Open", style=" min-width: 50px")
 								
 						div.tb-5-m0
 							div.ms-TextField(style="width: 100%; min-width: 50px")
 								label.ms-Label to
-								vue-timepicker.ms-TextField-field#input-fr_e(ref="input-fr_e" type="text", name="fr_e", placeholder="Close", style=" min-width: 50px")
+								vue-timepicker#input-fr_e(format="hh:mm A" ref="input-fr_e" type="text", name="fr_e", placeholder="Close", style=" min-width: 50px")
 								
 				div.tb-3-m0
 					div.row
@@ -210,12 +209,12 @@ if (infowindow === 'new')
 							
 							div.ms-TextField(style="width: 100%")
 								label.ms-Label From
-								vue-timepicker.ms-TextField-field#input-sa_b(ref="input-sa_b" type="text", name="sa_b", placeholder="Open", style=" min-width: 50px")
+								vue-timepicker#input-sa_b(format="hh:mm A" ref="input-sa_b" type="text", name="sa_b", placeholder="Open", style=" min-width: 50px")
 								
 						div.tb-5-m0
 							div.ms-TextField(style="width: 100%; min-width: 50px")
 								label.ms-Label to
-								vue-timepicker.ms-TextField-field#input-sa_e(ref="input-sa_e" type="text", name="sa_e", placeholder="Close", style=" min-width: 50px")
+								vue-timepicker#input-sa_e(format="hh:mm A" ref="input-sa_e" type="text", name="sa_e", placeholder="Close", style=" min-width: 50px")
 								
 				div.tb-3-m0
 					div.row
@@ -238,12 +237,12 @@ if (infowindow === 'new')
 							
 							div.ms-TextField(style="width: 100%")
 								label.ms-Label From
-								vue-timepicker.ms-TextField-field#input-su_b(ref="input-su_b" type="text", name="su_b", placeholder="Open", style=" min-width: 50px")
+								vue-timepicker#input-su_b(format="hh:mm A" ref="input-su_b" type="text", name="su_b", placeholder="Open", style=" min-width: 50px")
 								
 						div.tb-5-m0
 							div.ms-TextField(style="width: 100%; min-width: 50px")
 								label.ms-Label to
-								vue-timepicker.ms-TextField-field#input-su_e(ref="input-su_e" type="text", name="su_e", placeholder="Close", style=" min-width: 50px")
+								vue-timepicker#input-su_e(format="hh:mm A" ref="input-su_e" type="text", name="su_e", placeholder="Close", style=" min-width: 50px")
 								
 				div.tb-3-m0
 					div.row
@@ -418,19 +417,20 @@ if (infowindow === 'edit')
 									span.ms-label Medical
 				p.ms-font-l Hours of Operation
 				div.row
-					div.tb-9-m0#mo_hrs
+					div.tb-9-m0#mo_hrs(style="height:max-content;overflow-y:visible;")
 						div.row
 							div.tb-11-m0.ms-font-m Monday
 							div.tb-5-m0
 
-								div(:class="(doc.properties.hours.mo.begin !== null)?'ms-TextField':'ms-TextField is-disabled'")
+								div.clearfix(:class="(doc.properties.hours.mo.begin !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label From
-									vue-timepicker.ms-TextField-field#input-mo_b(ref="input-mo_b" type="text", name="mo_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.mo.begin !== null)?moment(doc.properties.hours.mo.begin).format('LT'):"")
+									vue-timepicker#input-mo_b(ref="input-mo_b" type="text", name="mo_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.mo.begin !== null)?moment(doc.properties.hours.mo.begin).format('LT'):"")
 
 							div.tb-5-m0
-								div(:class="(doc.properties.hours.mo.end !== null)?'ms-TextField':'ms-TextField is-disabled'")
+								div.clearfix(:class="(doc.properties.hours.mo.end !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label to
-									vue-timepicker.ms-TextField-field#input-mo_e(ref="input-mo_e" type="text", name="mo_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.mo.end !== null)?moment(doc.properties.hours.mo.end).format('LT'):"")
+									vue-timepicker#input-mo_e(ref="input-mo_e" type="text", name="mo_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.mo.end !== null)?moment(doc.properties.hours.mo.end).format('LT'):"")
+						//- div.clearfix(style="clear:both;")
 
 					div.tb-3-m0
 						div.row
@@ -452,19 +452,19 @@ if (infowindow === 'edit')
 										span.ms-label Closed
 				hr
 				div.row
-					div.tb-9-m0#tu_hrs
+					div.tb-9-m0#tu_hrs(style="height:max-content;overflow-y:visible;")
 						div.row
 							div.tb-11-m0.ms-font-m Tuesday
 							div.tb-5-m0
 
 								div(:class="(doc.properties.hours.tu.begin !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label From
-									vue-timepicker.ms-TextField-field#input-tu_b(ref="input-tu_b" type="text", name="tu_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.tu.begin !== null)?moment(doc.properties.hours.tu.begin).format('LT'):"")
+									vue-timepicker#input-tu_b(ref="input-tu_b" type="text", name="tu_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.tu.begin !== null)?moment(doc.properties.hours.tu.begin).format('LT'):"")
 
 							div.tb-5-m0
 								div(:class="(doc.properties.hours.tu.end !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label to
-									vue-timepicker.ms-TextField-field#input-tu_e(ref="input-tu_e" type="text", name="tu_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.tu.end !== null)?moment(doc.properties.hours.tu.end).format('LT'):"")
+									vue-timepicker#input-tu_e(ref="input-tu_e" type="text", name="tu_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.tu.end !== null)?moment(doc.properties.hours.tu.end).format('LT'):"")
 
 					div.tb-3-m0
 						div.row
@@ -486,19 +486,19 @@ if (infowindow === 'edit')
 										span.ms-label Closed		
 				hr
 				div.row
-					div.tb-9-m0#we_hrs
+					div.tb-9-m0#we_hrs(style="height:max-content;overflow-y:visible;")
 						div.row
 							div.tb-11-m0.ms-font-m Wednesday
 							div.tb-5-m0
 
 								div(:class="(doc.properties.hours.we.begin !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label From
-									vue-timepicker.ms-TextField-field#input-we_b(ref="input-we_b" type="text", name="we_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.we.begin !== null)?moment(doc.properties.hours.we.begin).format('LT'):"")
+									vue-timepicker#input-we_b(ref="input-we_b" type="text", name="we_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.we.begin !== null)?moment(doc.properties.hours.we.begin).format('LT'):"")
 
 							div.tb-5-m0
 								div(:class="(doc.properties.hours.we.end !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label to
-									vue-timepicker.ms-TextField-field#input-we_e(ref="input-we_e" type="text", name="we_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.we.end !== null)?moment(doc.properties.hours.we.end).format('LT'):"")
+									vue-timepicker#input-we_e(ref="input-we_e" type="text", name="we_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.we.end !== null)?moment(doc.properties.hours.we.end).format('LT'):"")
 
 					div.tb-3-m0
 						div.row
@@ -520,19 +520,19 @@ if (infowindow === 'edit')
 										span.ms-label Closed
 				hr
 				div.row
-					div.tb-9-m0#th_hrs
+					div.tb-9-m0#th_hrs(style="height:max-content;overflow-y:visible;")
 						div.row
 							div.tb-11-m0.ms-font-m Thursday
 							div.tb-5-m0
 
 								div(:class="(doc.properties.hours.th.begin !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label From
-									vue-timepicker.ms-TextField-field#input-th_b(ref="input-th_b" type="text", name="th_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.th.begin !== null)?moment(doc.properties.hours.th.begin).format('LT'):"")
+									vue-timepicker#input-th_b(ref="input-th_b" type="text", name="th_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.th.begin !== null)?moment(doc.properties.hours.th.begin).format('LT'):"")
 
 							div.tb-5-m0
 								div(:class="(doc.properties.hours.th.end !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label to
-									vue-timepicker.ms-TextField-field#input-th_e(ref="input-th_e" type="text", name="th_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.th.end !== null)?moment(doc.properties.hours.th.end).format('LT'):"")
+									vue-timepicker#input-th_e(ref="input-th_e" type="text", name="th_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.th.end !== null)?moment(doc.properties.hours.th.end).format('LT'):"")
 
 					div.tb-3-m0
 						div.row
@@ -554,19 +554,19 @@ if (infowindow === 'edit')
 										span.ms-label Closed
 				hr
 				div.row
-					div.tb-9-m0#fr_hrs
+					div.tb-9-m0#fr_hrs(style="height:max-content;overflow-y:visible;")
 						div.row
 							div.tb-11-m0.ms-font-m Friday
 							div.tb-5-m0
 
 								div(:class="(doc.properties.hours.fr.begin !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label From
-									vue-timepicker.ms-TextField-field#input-fr_b(ref="input-fr_b" type="text", name="fr_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.fr.begin !== null)?moment(doc.properties.hours.fr.begin).format('LT'):"")
+									vue-timepicker#input-fr_b(ref="input-fr_b" type="text", name="fr_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.fr.begin !== null)?moment(doc.properties.hours.fr.begin).format('LT'):"")
 
 							div.tb-5-m0
 								div(:class="(doc.properties.hours.fr.end !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label to
-									vue-timepicker.ms-TextField-field#input-fr_e(ref="input-fr_e" type="text", name="fr_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.fr.end !== null)?moment(doc.properties.hours.fr.end).format('LT'):"")
+									vue-timepicker#input-fr_e(ref="input-fr_e" type="text", name="fr_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.fr.end !== null)?moment(doc.properties.hours.fr.end).format('LT'):"")
 
 					div.tb-3-m0
 						div.row
@@ -588,19 +588,19 @@ if (infowindow === 'edit')
 										span.ms-label Closed
 				hr
 				div.row
-					div.tb-9-m0#sa_hrs
+					div.tb-9-m0#sa_hrs(style="height:max-content;overflow-y:visible;")
 						div.row
 							div.tb-11-m0.ms-font-m Saturday
 							div.tb-5-m0
 
 								div(:class="(doc.properties.hours.sa.begin !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label From
-									vue-timepicker.ms-TextField-field#input-sa_b(ref="input-sa_b" type="text", name="sa_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.sa.begin !== null)?moment(doc.properties.hours.sa.begin).format('LT'):"")
+									vue-timepicker#input-sa_b(ref="input-sa_b" type="text", name="sa_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.sa.begin !== null)?moment(doc.properties.hours.sa.begin).format('LT'):"")
 
 							div.tb-5-m0
 								div(:class="(doc.properties.hours.sa.end !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label to
-									vue-timepicker.ms-TextField-field#input-sa_e(ref="input-sa_e" type="text", name="sa_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.sa.end !== null)?moment(doc.properties.hours.sa.end).format('LT'):"")
+									vue-timepicker#input-sa_e(ref="input-sa_e" type="text", name="sa_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.sa.end !== null)?moment(doc.properties.hours.sa.end).format('LT'):"")
 
 					div.tb-3-m0
 						div.row
@@ -622,19 +622,19 @@ if (infowindow === 'edit')
 										span.ms-label Closed
 				hr
 				div.row
-					div.tb-9-m0#su_hrs
+					div.tb-9-m0#su_hrs(style="height:max-content;overflow-y:visible;")
 						div.row
 							div.tb-11-m0.ms-font-m Sunday
 							div.tb-5-m0
 
 								div(:class="(doc.properties.hours.su.begin !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label From
-									vue-timepicker.ms-TextField-field#input-su_b(ref="input-su_b" type="text", name="su_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.su.begin !== null)?moment(doc.properties.hours.su.begin).format('LT'):"")
+									vue-timepicker#input-su_b(ref="input-su_b" type="text", name="su_b", placeholder="Open", style=" min-width: 50px", value=(doc.properties.hours.su.begin !== null)?moment(doc.properties.hours.su.begin).format('LT'):"")
 
 							div.tb-5-m0
 								div(:class="(doc.properties.hours.su.end !== null)?'ms-TextField':'ms-TextField is-disabled'")
 									label.ms-Label to
-									vue-timepicker.ms-TextField-field#input-su_e(ref="input-su_e" type="text", name="su_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.su.end !== null)?moment(doc.properties.hours.su.end).format('LT'):"")
+									vue-timepicker#input-su_e(ref="input-su_e" type="text", name="su_e", placeholder="Close", style=" min-width: 50px", value=(doc.properties.hours.su.end !== null)?moment(doc.properties.hours.su.end).format('LT'):"")
 
 					div.tb-3-m0
 						div.row
