--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,10 +18,10 @@ html
 		link(rel="stylesheet" href="/stylesheets/vue2-timepicker/VueTimepicker.css")
 		//- link(rel="stylesheet" href="/stylesheets/office-ui-fabric-vue/index.css")
 		script(type="text/javascript", src="/scripts/jquery.min.js")
-		if (env && env === 'production')
-			script(type="text/javascript", src="/scripts/vue.min.js")
-		else
-			script(type="text/javascript", src="/scripts/vue.js")
+		//- if (env && env === 'production')
+		script(type="text/javascript", src="/scripts/vue.min.js")
+		//- else
+			//- script(type="text/javascript", src="/scripts/vue.js")
 
 		script(type="text/javascript", src="/scripts/leaflet.js")
 		script(type="text/javascript", src="/scripts/moment-with-locales.min.js")
