fix drag marker

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,9 +19,9 @@ html
 		//- link(rel="stylesheet" href="/stylesheets/office-ui-fabric-vue/index.css")
 		script(type="text/javascript", src="/scripts/jquery.min.js")
 		//- if (env && env === 'production')
-		script(type="text/javascript", src="/scripts/vue.min.js")
+		//- script(type="text/javascript", src="/scripts/vue.min.js")
 		//- else
-			//- script(type="text/javascript", src="/scripts/vue.js")
+		script(type="text/javascript", src="/scripts/vue.js")
 
 		script(type="text/javascript", src="/scripts/leaflet.js")
 		script(type="text/javascript", src="/scripts/moment-with-locales.min.js")
