--- a/views/menu.pug
+++ b/views/menu.pug
@@ -3,7 +3,7 @@
 	li.tb-2-m0.tb-1-m2
 		//- input#mySearch.catchphrase(type="search", placeholder="search", @change="searchThis")
 		a(href="#", title="Menu")
-			img(src="https://pu.bli.sh/images/menu_button.svg")
+			img(src="/images/menu-alt-512.svg")
 
 		div#dropdown.row
 			a.drop.tb-11-m0#shelterwatch(href="/shelterwatch")
