--- a/views/menu.pug
+++ b/views/menu.pug
@@ -16,8 +16,8 @@
 				a.drop.tb-11-m0#logout(href="/logout") 
 					span.ms-font-l Log out
 				
-			else
-				a.drop.tb-11-m0#cv(href="/login") 
-					span.ms-font-l Login
-				a.drop.tb-11-m0#gallery(href="/register") 
-					span.ms-font-l Register
+			//- else
+			//- 	a.drop.tb-11-m0#cv(href="/login") 
+			//- 		span.ms-font-l Login
+			//- 	a.drop.tb-11-m0#gallery(href="/register") 
+			//- 		span.ms-font-l Register
